--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "alt",
   "version": "0.18.6",
   "description": "A flux implementation",
-  "main": "lib",
-  "jsnext:main": "src",
+  "main": "src",
   "dependencies": {
     "flux": "2.1.1",
     "is-promise": "2.1.0",
